[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/escoria-ui-9verbs/tooltip/action_target_tooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/escoria-ui-9verbs/inventory/inventory_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/escoria-ui-9verbs/verbs_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/escoria-core/game/scenes/dialogs/esc_dialog_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/escoria-ui-9verbs/game.gd" type="Script" id=5]
[ext_resource path="res://addons/escoria-core/game/scenes/camera_player/camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/ui/commons/room_select.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/escoria-ui-9verbs/tooltip/tooltip_action_target.gd" type="Script" id=8]
[ext_resource path="res://game/ui/commons/pause_menu/pause_menu.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.5 )

[node name="game" type="Node2D"]
script = ExtResource( 5 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="panel_down" type="PanelContainer" parent="ui"]
anchor_top = 0.714
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.200012
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verbs_layer" type="CanvasLayer" parent="ui/panel_down"]
layer = 2

[node name="verbs_menu" parent="ui/panel_down/verbs_layer" instance=ExtResource( 3 )]
anchor_top = 0.715
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 52.0
margin_top = 38.5
margin_right = -959.0
margin_bottom = -63.0

[node name="room_select" parent="ui/panel_down/verbs_layer" instance=ExtResource( 7 )]
margin_left = 503.504
margin_top = 820.091
margin_right = 686.504
margin_bottom = 840.091

[node name="inventory_layer" type="CanvasLayer" parent="ui/panel_down"]
layer = 2

[node name="inventory_ui" parent="ui/panel_down/inventory_layer" instance=ExtResource( 2 )]
anchor_top = 0.722
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 752.0
margin_top = 31.2
margin_right = -63.0
margin_bottom = -61.0

[node name="tooltip_layer" type="CanvasLayer" parent="ui/panel_down"]
layer = 2

[node name="tooltip" parent="ui/panel_down/tooltip_layer" instance=ExtResource( 1 )]
anchor_left = 0.132
anchor_top = 0.719
anchor_right = 0.832
anchor_bottom = 0.767
margin_left = 0.0272522
margin_top = 0.320557
margin_right = -0.252686
margin_bottom = -0.0794678
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 8 )
color = Color( 1, 1, 1, 1 )

[node name="dialog_layer" type="CanvasLayer" parent="ui"]
layer = 3

[node name="dialog_player" parent="ui/dialog_layer" instance=ExtResource( 4 )]

[node name="hover_stack" type="Label" parent="ui"]
margin_left = 1085.0
margin_top = 2.81912
margin_right = 1283.0
margin_bottom = 107.819
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" parent="ui" instance=ExtResource( 9 )]
visible = false

[node name="camera" parent="." instance=ExtResource( 6 )]
